# dew

./: .gitignore  CMakeLists.txt  LICENSE
include/dew/: allocator.h  base.h  config.h  debug.h  dew.h  exception.h  macros.h  option.h  option_fwd.h  platform.h  primitives.h  result.h  result_fwd.h  static_assert.h  string.h  string_util.h  unit.h  util.h  vec.h
include/dew/base/: allocator.h  exception.h  option.h  option_fwd.h  result.h  result_fwd.h  vec.h
include/dew/collections/: array.h
include/dew/core/: exception.h
include/dew/core/collections/: array.h  collections_fwd.h  option.h  result.h  vec.h
include/dew/internal/: stb_sprintf.h  strpool.h
include/dew/memory/: allocator.h  memory_modify.h  memory_raw.h  modify.h  slice.h
include/dew/prelude/: base.h
src/: base.c  base.cpp  debug.cpp  string.c  string.cpp  string_util.c  string_util.cpp  test.cpp
src/memory/: allocator.c  allocator.cpp
